# SE990-Chinese-Star-Name-Pack

./: .gitignore  README.md
2052/Locale/: chs-db.cfg
南天/Catalogs/: 经天该.txt
南天/Catalogs/Clusters/: IC 2602.sc
南天/Catalogs/Galaxies/: 夹白.sc  附白.sc
南天/Catalogs/Planets/: 01.海山.sc  01.海石.sc  02.十字架.sc  03.马尾.sc  04.马腹.sc  05.蜜蜂.sc  06.三角形.sc  07.异雀.sc  08.孔雀.sc  10.蛇尾.sc  11.蛇腹.sc  12.蛇首.sc  13.鸟喙.sc  14.鹤.sc  15.火鸟.sc  16.水委.sc  18.夹白.sc  19.金鱼.sc  21.飞鱼.sc  22.南船.sc  23.小斗.sc  IC 2602.sc  南天星官.sc
南天/Catalogs/Stars/: 01.海山.sc  01.海石.sc  02.十字架.sc  03.马尾.sc  04.马腹.sc  05.蜜蜂.sc  06.三角形.sc  07.异雀.sc  08.孔雀.sc  09.波斯.sc  10.蛇尾.sc  10_蛇尾.sc  11.蛇腹.sc  11_蛇腹.sc  12.蛇首.sc  12_蛇首.sc  13.鸟喙.sc  13_鸟喙.sc  14.鹤.sc  14_鹤.sc  15.火鸟.sc  15_火鸟.sc  16.水委.sc  16_水委.sc  17.附白.sc  17_附白.sc  18.夹白.sc  18_夹白.sc  19.金鱼.sc  19_金鱼.sc  1_海山.sc  20_海石.sc  21.飞鱼.sc  21_飞鱼.sc  22.南船.sc  22_南船.sc  23.小斗.sc  23_小斗.sc  24.南极.sc  24_南极.sc  (+9 more)
天市/Catalogs/: 丹元子步天歌.txt
天市/Catalogs/Planets/: 01.天市左垣.sc  02.天市右垣.sc  04.车肆.sc  06.宗人.sc  07.宗.sc  08.帛度.sc  10.候.sc  11.帝座.sc  13.列肆.sc  14.斗.sc  16.贯索.sc  17.七公.sc  18.天纪.sc  19.女床.sc  3.市楼.sc  天市垣.sc
天市/Catalogs/Stars/: 01.天市左垣.sc  01_天市左垣.sc  02.天市右垣.sc  02_天市右垣.sc  03.市楼.sc  03_市楼.sc  04.车肆.sc  04_车肆.sc  05.宗正.sc  05_宗正.sc  06_宗人.sc  07.宗.sc  07_宗.sc  08.帛度.sc  08_帛度.sc  09.屠肆.sc  09_屠肆.sc  1.天市左垣.sc  10.候.sc  10_候.sc  11.帝座.sc  11_帝座.sc  12.宦者.sc  12_宦者.sc  13.列肆.sc  13_列肆.sc  14.斗.sc  14_斗.sc  15.斛.sc  15_斛.sc  16.贯索.sc  16_贯索.sc  17.七公.sc  (+6 more)
太微/Catalogs/: 丹元子步天歌.txt
星座/: CMakeLists.txt
星座/Catalogs/: 丹霞自序.txt
星座/Catalogs/Planets/: ExoPlanets.sc  ExoPlanets_ACen.sc  ExoPlanets_TCet.sc  八方绕磐岩.sc  天涯若比邻.sc  珍珠之歌.sc
星座/Catalogs/Stars/: Constellations.cfg
星座/Scripts/: StellarDX_202106.txt  dyzbtg.txt  twhxj.txt  xtbtg.txt
星座/Scripts/menu/: MainMenu.cfg
星座/Src/Main/Cxx/: CMakeLists.txt  CommonCalculator.cc  GaiaAutoComplete.cc  SimbadOutputParser.cc
紫微/Catalogs/: 丹元子步天歌.txt
(+833 files in other folders)
